# EAMain

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
include/EAMain/: EAEntryPointMain.inl  EAMain.h  EAMainExit.h  EAMainInitFini.inl  IPhoneEntry.h  version.h
include/EAMain/internal/: EAMainChannels.h  EAMainPrintManager.h  EAMainStartupShutdown.h  EAMainStartupShutdown.inl  Version.h
source/: EAEntryPointMain.cpp  EAMain.cpp  EAMainExit.cpp  EAMainPrint.cpp  EAMainPrintf.h
source/internal/: EAMainChannels.cpp  EAMainPrintManager.cpp  EAMainStartupShutdown.cpp  NetworkChannel.cpp  NetworkChannel.h
source/internal/kettle/: EAMainSubmitDone.cpp
test/: CMakeLists.txt
test/source/Crash/: CrashHelper.cpp  Main.cpp
test/source/Main/: Main.cpp
test/source/NoMain/: Main.cpp
test/source/WinRT/: Main.cpp
